# -

./: README.md  gui.py  main.py  pyproject.toml  test_gui_smoke.py  test_playthrough.py  启动图形界面.bat  重生火影.md
data/: characters.json  contracts.json  maps.json  quests.json  skills.json
output/imagegen/: icon-prompts.jsonl  illustration-prompts.jsonl  missing-action-prompts.jsonl  missing-icon-prompts.jsonl  portrait-prompts.jsonl
saves/: collection_profile.json  save_03.json  save_03.json.bak
scenes/: akatsuki_shadow.py  bonding.py  chapter_01.py  chapter_02.py  chapter_03.py  chunin_exam.py  events.py  fourth_war.py  kazekage_rescue.py  konoha_crush.py  pain_assault.py  rin_arc.py  romance.py  sasuke_retrieval.py  tsunade_search.py  wave_country.py
systems/: battle.py  collection.py  contract.py  crafting.py  equipment.py  factions.py  fate.py  icon_assets.py  loadout.py  map.py  new_game_plus.py  party.py  progression_graphs.py  quest.py  runtime.py  save.py  skill_mastery.py  state.py  time_system.py  tougen.py  ui.py  validation.py  visual_assets.py  wanted.py  world_events.py
tests/: __init__.py  test_combat_tactics.py  test_dynamic_growth_crafting.py  test_endgame_systems.py  test_freedom_systems.py  test_icon_assets.py  test_long_term_loops.py  test_progression_graphs.py  test_resource_limits.py  test_save.py  test_validation.py  test_visual_assets.py
tools/: build_game_art.py  process_visual_assets.py
